<resources>
    <string name="app_name">Carzenia</string>
    <string name="app_description">Book unforgettable cars from trusted hosts around the world.</string>
    <string name="about_the_app_1"><u>Carzenia</u> is a company that rents cars automobiles
        for short periods of time for a fee. It is often organized with numerous local branches
        and primarily located near airports or busy city areas and often complemented
        by an app allowing online reservations.</string>
    <string name="about_the_app_2"><u>Carzenia</u> primarily serves people who have a car
        that is temporarily out of reach or out of service,
        for example travellers who are out of town or owners of damaged or destroyed vehicles
        who are awaiting repair or insurance compensation.</string>
    <string name="forget_pass_info">Provide Your Account\'s email for which you want to reset your password !</string>
    <string name="enter_mail">Enter Your Email</string>
    <string name="next">Next</string>
    <string name="message_subject">Message Subject...</string>
    <string name="message_content">Your Message...</string>
    <string name="contact_us">Contact Us...</string>
    <string name="send">SEND..!</string>
    <string name="contact_us_2">Contact Us</string>
    <string name="issue">ISSUE</string>
    <string name="other">OTHER</string>
    <string name="view_responses">View Responses</string>
    <string name="from">From:</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="response">Response:</string>
    <string name="no_messages">There\'s No Message To Show !</string>
    <string name="no_response">No Response Yet !</string>
    <string name="add_new_car">Add a New Car</string>
    <string name="add_new_admin">Add a New Admin</string>
    <string name="upload_image">Upload an image</string>
    <string name="respond">Respond</string>
    <string name="show_cst">Show Customer Info</string>
    <string name="cars_exhibition">Car Exhibition</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="user_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_user_sign">New User? Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone</string>
    <string name="credit_1">FROM BONUS&#8482; TEAM \n ALL RIGHTS ARE RESERVED &#xA9;</string>
    <string name="credit_2">ALL CREDIT TO BONUS &#8482; TEAM</string>
    <string name="remove_car_or_cars">Remove Car/s</string>
    <string name="car_id">Car ID</string>
    <string name="car_info">Car Info</string>
    <string name="car_type">Car Type</string>
    <string name="car_occasion">Car Occasion</string>
    <string name="car_price_per_hour">Car Price/Hour</string>
    <string name="remove_selected">Remove Selected</string>
    <string name="remove_all_cars">Remove All Cars</string>
    <string name="update_a_car">Update a Car</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="rent">Rent</string>
    <string name="rent_from">Rent Form</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="total_price">Total Price</string>
    <string name="price_per_hour">LE. Per Hour</string>
    <string name="confirm_rent">Confirm Rent</string>
    <string name="number_of_rents">Number Of Rents</string>
    <string name="save_changes">Save Changes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_profile">Profile</string>
    <string name="navigation_drawer_cars">Cars</string>
    <string name="navigation_drawer_rent">Rent</string>
    <string name="navigation_drawer_contact">Contact</string>
    <string name="navigation_drawer_about">About</string>
    <string name="navigation_drawer_logout">Logout</string>
    <string name="admin_page">Admin Page</string>
    <string name="add_car">Add Car</string>
    <string name="add_the_car">Add The Car</string>
    <string name="remove_car">Remove Cars</string>
    <string name="update_car">Update Cars</string>
    <string name="display_cars">Display Cars</string>
    <string name="add_admin">Add Admin</string>

    <string name="toast_empty_fields">Please Fill The Empty Fields !</string>
    <string name="toast_empty_mail">Please Enter Your Email !</string>
    <string name="toast_empty_pass">Please Enter Your Password !</string>
    <string name="toast_choose_message_type">Please Choose Message Type !</string>
    <string name="toast_empty_msg_subj">Please Enter Your Message Subject !</string>
    <string name="toast_empty_msg_body">Please Enter Your Message Body !</string>
    <string name="toast_enter_car_image">Please Add The Car Image !</string>
    <string name="toast_enter_car_type">Please Mention The Car Type !</string>
    <string name="toast_enter_car_occasion">Please Mention The Car Occasion !</string>
    <string name="toast_enter_car_price">Please Mention The Car Price !</string>
    <string name="toast_add_cars">Please Add Some Cars First !</string>
    <string name="toast_add_rental_duration">Please Specify The Rental Duration !</string>
    <string name="toast_enter_car_added">Car Added To The Exhibition.</string>
    <string name="toast_all_cars_removed">All Cars Have Been Removed !</string>
    <string name="toast_no_car_to_remove">There\'s No Car To Remove !</string>
    <string name="toast_no_car_to_update">There\'s No Car To Update !</string>
    <string name="toast_no_existing_cars">There\'s No Existing Cars !</string>
    <string name="toast_no_cars_to_rent">Sorry Still No Cars To Be Rented !</string>
    <string name="toast_no_cars_to_show">"No Cars To Show !"</string>
    <string name="toast_name_validation">Name Must Be At Least Of 3 Characters !</string>
    <string name="toast_pass_validation">Password Must Be At Least Of 3 Characters !</string>
    <string name="toast_pass_match">The Passwords Don\'t Match.. !!</string>
    <string name="toast_phone_size_validation">Phone Number Must Consist Of 11 Digits !</string>
    <string name="toast_phone__number_validation">Phone Number Must Consist Of Only Numbers !</string>
    <string name="toast_registered_successfully">Registered Successfully As</string>
    <string name="toast_no_network">No Internet Connection!</string>
    <string name="toast_try_again_later">Something Went Wrong, Try Again Later!</string>
    <string name="toast_already_registered_user">A User With The Same Mail Is Already Registered !</string>
    <string name="toast_no_such_user">No Such User Exists !</string>
    <string name="toast_no_selected_img">No New Image Selected !</string>
    <string name="toast_data_saved">Data Saved Successfully !</string>
    <string name="toast_update_in_progress">Upload In Progress !</string>
    <string name="toast_pick_image">Pick An Image !</string>
    <string name="toast_nothing_selected">THE EXHIBITION IS EMPTY !</string>
    <string name="toast_new_admin_added">New Admin Has Been Added !</string>
    <string name="toast_car_with_id_removed">Car With ID: %1$s\nHas Been Removed</string>
    <string name="toast_car_with_id_updated">Car With ID: %1$s\nHas Been Updated</string>
    <string name="toast_not_valid_date">Not A Valid Date.</string>
    <string name="toast_message_sent">Your Message Has Been Sent !</string>
    <string name="toast_sent_response">Your Response Sent Successfully !</string>
    <string name="toast_car_rented">Rented Successfully.</string>
    <string name="toast_we_send_email_to_you">We Send You an Email\nPlease Check Your E-mail !</string>

    <string name="alert_title">ALERT</string>
    <string name="alert_messages_title">Message Response !</string>
    <string name="alert_cst_info_title">Customer Info !</string>
    <string name="alert_write_response_here">write your response here...</string>
    <string name="alert_logout_body">Do You Want To Logout ?</string>
    <string name="alert_remove_all_cars_body">Are You Sure ?\nDo You Want To Remove All The Existing Cars ?</string>
    <string name="alert_confirm_rental_body">Do You Want To Confirm Your Rental ?</string>
    <string name="alert_positive_button">Yes</string>
    <string name="alert_negative_button">No</string>
    <string name="alert_ok_button">Ok</string>
    <string name="alert_message_positive_button">Send My Response!</string>
    <string name="alert_message_negative_button">Cancel</string>
</resources>