<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corner"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.android.carzenia.UserFragments.ContactUsFragment">

    <TextView
        style="@style/DefaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_spacing"
        android:background="@drawable/rounded_corner"
        android:text="@string/contact_us_2"
        android:textAllCaps="true"
        android:textColor="@color/FontColor"
        android:textSize="@dimen/text_size_medium" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comic_font"
            android:text="@string/issue"
            android:textColor="@color/HighlightColor"
            android:textSize="@dimen/text_size_small" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_spacing"
            android:fontFamily="@font/comic_font"
            android:text="@string/other"
            android:textColor="@color/HighlightColor"
            android:textSize="@dimen/text_size_small" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_spacing"
        android:layout_marginTop="@dimen/medium_spacing"
        android:layout_marginRight="@dimen/large_spacing"
        android:textColorHint="@color/HighlightColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_message_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comic_font"
            android:hint="@string/message_subject"
            android:maxLength="20"
            android:textColor="@color/FontColor"
            android:textSize="@dimen/text_size_small"
            android:textAlignment="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_message_body_height"
        android:layout_marginLeft="@dimen/large_spacing"
        android:layout_marginTop="@dimen/medium_spacing"
        android:layout_marginRight="@dimen/large_spacing"
        android:textColorHint="@color/HighlightColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_message_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/comicz"
            android:hint="@string/message_content"
            android:textColor="@color/FontColor"
            android:textSize="@dimen/text_size_small"
            android:textAlignment="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_send_message"
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner2"
        android:paddingLeft="@dimen/medium_spacing"
        android:paddingRight="@dimen/medium_spacing"
        android:text="@string/send"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/button_view_responses"
        style="@style/DefaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner2"
        android:text="@string/view_responses"
        android:textColor="@android:color/black" />

</LinearLayout>