<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical">

    <TextView
        style="@style/DefaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:text="About The App"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_the_app_1"
        android:textSize="@dimen/text_size_small" />

    <TextView
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_the_app_2"
        android:textSize="@dimen/text_size_small" />

    <Button
        android:id="@+id/button_contact"
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/small_spacing"
        android:background="@drawable/rounded_corner2"
        android:text="@string/contact_us"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_small" />

</LinearLayout>