<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/splash_image_view_logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/splash_cover_height"
        android:layout_marginLeft="@dimen/splash_cover_spacing"
        android:layout_marginTop="@dimen/splash_cover_height"
        android:layout_marginRight="@dimen/splash_cover_spacing"
        android:src="@drawable/logo2"
        android:transitionName="logo_image" />

    <TextView
        android:id="@+id/descriptionView"
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/splash_image_view_logo"
        android:layout_margin="@dimen/splash_cover_spacing"
        android:text="@string/app_description" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:fontFamily="@font/cooper_font"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/HighlightColor"
        android:textSize="@dimen/text_size_medium"
        android:transitionName="logo_text" />

    <TextView
        android:id="@+id/rightsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/small_spacing"
        android:fontFamily="@font/comic_font"
        android:text="@string/credit_1"
        android:textAlignment="center"
        android:textColor="@color/FontColor" />
</RelativeLayout>