<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:orientation="vertical"
    tools:context=".UserAuthentication.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/splash_cover_height"
            android:layout_marginTop="@dimen/small_spacing"
            android:src="@drawable/logo2"
            android:transitionName="logo_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comicz"
            android:layout_marginBottom="@dimen/small_spacing"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textColor="@color/FontColor"
            android:textSize="@dimen/text_size_medium"
            android:transitionName="logo_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_spacing"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_marginRight="@dimen/small_spacing"
            android:hint="@string/full_name"
            android:textColorHint="@color/HighlightColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_signup_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comic_font"
                android:textColor="@color/FontColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_spacing"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_marginRight="@dimen/small_spacing"
            android:hint="@string/email"
            android:textColorHint="@color/HighlightColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comic_font"
                android:textColor="@color/FontColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_spacing"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_marginRight="@dimen/small_spacing"
            android:hint="@string/phone_number"
            android:textColorHint="@color/HighlightColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_signup_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comic_font"
                android:textColor="@color/FontColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_spacing"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_marginRight="@dimen/small_spacing"
            android:hint="@string/password"
            android:textColorHint="@color/HighlightColor"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_signup_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comic_font"
                android:inputType="textPassword"
                android:textColor="@color/FontColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_spacing"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_marginRight="@dimen/small_spacing"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/HighlightColor"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_signup_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comic_font"
                android:inputType="textPassword"
                android:textColor="@color/FontColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_spacing"
            android:layout_marginTop="@dimen/medium_spacing"
            android:layout_marginRight="@dimen/small_spacing"
            android:background="@android:color/black"
            android:fontFamily="@font/comic_font"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small" />

        <Button
            android:id="@+id/button_login_from_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_spacing"
            android:background="@android:color/white"
            android:fontFamily="@font/comic_font"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>

</ScrollView>